Fix for Streamcard height on small screens

--- a/flask-nginx-rtmp-mgmt/static/css/main.css
+++ b/flask-nginx-rtmp-mgmt/static/css/main.css
@@ -196,7 +196,7 @@
 
     .streamcard-item {
         width: 95%;
-        height: 395px;
+        height: 450px;
     }
 
     .searchBar {
